# ml-agent

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py  base.py
agents/training_agent/: __init__.py  agent.py
api/: __init__.py  dependencies.py  server.py
api/routes/: __init__.py  health.py  tasks.py
api/schemas/: __init__.py  task.py
core/: __init__.py  config.py  database.py  logging.py
core/storage/: __init__.py  base.py  factory.py  mongodb.py  postgres.py
graphs/: __init__.py
graphs/nodes/: __init__.py  check_ops.py  router.py  submit_ops.py
graphs/state/: __init__.py  agent_state.py
graphs/workflows/: __init__.py  training_flow.py
manager/: __init__.py  orchestrator.py  scheduler.py
scripts/: init_db.sql  init_mongodb.js  setup_db.py
tests/: conftest.py  test_mock_client.py  test_workflow.py
tools/: __init__.py
tools/cluster_api/: __init__.py  base.py  hope_client.py  mock_client.py
