[project]
name = "ml-agent"
version = "0.1.0"
description = "LLM Full-Pipeline Automation Agent Platform"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["api", "agents", "graphs", "tools", "manager", "core"]
skip = [".git", ".venv", "venv", "__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "__pycache__"]

